finished by today

--- a/index.html
+++ b/index.html
@@ -14,12 +14,17 @@
     <!--aqui o conteudo do site depois do conteudo-->
     <div class="container">
         <div class="container-pic"></div>
-        <div id="click_pic" class="picture" onclick='carsky()' style="cursor: pointer;">
+        <div
+            id="click_pic"
+            class="picture"
+            onclick="carsky()"
+            style="cursor: pointer;"
+        >
             <div id="one-picture">
-                <img src="./src/assets/images/principal.png" class="one-picture"/>
+                <img src="./src/assets/images/principal.png" class="one-picture">
             </div>
             <div id="second-picture" style="display: none;">
-                <img src="./src/assets/images/5329__2962_.png" class="second-picture"/>
+                <img src="./src/assets/images/5329__2962_.png" class="second-picture">
             </div>
         </div>
         <div class="container-text">
@@ -34,9 +39,7 @@
                     </p>
                 </div>
                 <div class="button-for-networks-links">
-                    <a href="/rede">
-                        <button onclick="network()" type="submit">Veja tudo por aqui!</button>
-                    </a>
+                    <button onclick="about()" type="submit">Veja tudo por aqui!</button>
                 </div>
             </div>
         </div>
