--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <title>Início</title>
     <meta charset="UTF-8" lang="PT-BR">
     <link rel="stylesheet" type="text/css" href="./src/styles/Stylesheet.css">
-    <link rel="icon" type="image/x-icon" href="./src/assets/images/icon.png">
+    <link rel="icon" type="image/x-icon" href="./src/assets/images/icon.ico">
     <script src="./src/scripts/components.js"></script>
     <script src="./src/scripts/year_now.js"></script>
     <script src="./src/scripts/change_picture.js"></script>
