--- a/src/pages/about.html
+++ b/src/pages/about.html
@@ -3,7 +3,7 @@
     <title>Parceiros</title>
     <meta charset="UTF-8" lang="PT-BR">
     <link rel="stylesheet" type="text/css" href="../styles/Stylesheet.css">
-    <link rel="icon" type="image/x-icon" href="../assets/images/icon.png">
+    <link rel="icon" type="image/x-icon" href="../assets/images/icon.ico">
     <script src="../scripts/networks.js"></script>
     <script src="../scripts/components_pages.js"></script>
     <script src="../scripts/year_now.js"></script>
