--- a/src/pages/about.html
+++ b/src/pages/about.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-    <title>Parceiros</title>
+    <title>Plataformas</title>
     <meta charset="UTF-8" lang="PT-BR">
     <link rel="stylesheet" type="text/css" href="../styles/Stylesheet.css">
     <link rel="icon" type="image/x-icon" href="../assets/images/icon.ico">
